tests/data/appprotect/grpc/grpc-block-saygoodbye.yaml
apiVersion: appprotect.f5.com/v1beta1
kind: APPolicy
metadata:
  name: grpc-block-saygoodbye
spec:
  policy:
    blocking-settings:
      violations:
      - name: VIOL_GRPC_METHOD
        block: true
        alarm: true 
    applicationLanguage: utf-8
    bot-defense:
      settings:
        isEnabled: false
    grpc-profiles:
    - associateUrls: true
      defenseAttributes:
        allowUnknownFields: false
        maximumDataLength: "10000"
      description: My first profile
      idlFiles:
      - idlFile:
          fileName: autheid.proto
      name: gProf1
    idl-files:
    - isBase64: true
      fileName: autheid.proto
      contents: Ly8gVGhlIGdyZWV0aW5nIHNlcnZpY2UgZGVmaW5pdGlvbi4KCnN5bnRheCA9ICJwcm90bzMiOwoKcGFja2FnZSBoZWxsb3dvcmxkOwoKc2VydmljZSBHcmVldGVyIHsKICAvLyBTZW5kcyBhIGdyZWV0aW5nCiAgcnBjIFNheUhlbGxvIChIZWxsb1JlcXVlc3QpIHJldHVybnMgKEhlbGxvUmVwbHkpIHt9Cn0KCi8vIFRoZSByZXF1ZXN0IG1lc3NhZ2UgY29udGFpbmluZyB0aGUgdXNlcidzIG5hbWUuCm1lc3NhZ2UgSGVsbG9SZXF1ZXN0IHsKICBzdHJpbmcgbmFtZSA9IDE7Cn0KCi8vIFRoZSByZXNwb25zZSBtZXNzYWdlIGNvbnRhaW5pbmcgdGhlIGdyZWV0aW5ncwptZXNzYWdlIEhlbGxvUmVwbHkgewogIHN0cmluZyBtZXNzYWdlID0gMTsK [...]
    name: valid_string_encoding_policy
    template:
      name: POLICY_TEMPLATE_NGINX_BASE
