tests/data/appprotect/grpc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appprotect-ingress
  annotations:
    nginx.org/grpc-services: "grpc-svc"
    kubernetes.io/ingress.class: "nginx"
    appprotect.f5.com/app-protect-policy: "default/grpc"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "default/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=172.17.0.10:514"
spec:
  tls:
  - hosts:
    - appprotect.example.com
    secretName: appprotect-secret
  rules:
  - host: appprotect.example.com
    http:
      paths:
      - path: /helloworld.Greeter
        backend:
          service:
            name: grpc-svc
            port:
              number: 50051
